--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     top: 0px;
     background-color: #546d80;
     padding: 30px;
+    z-index: 1;
+    width: 100%;
+    text-align: center;
 }
 
 #corpo {
