--- a/style.css
+++ b/style.css
@@ -1,23 +1,38 @@
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+html {
+  scroll-padding-top: 120px;
 }
 
 body {
-  background-color: rgb(253 , 251 , 251);
+  background-color: rgb(253, 251, 251);
 }
 
 .container {
-  margin-top: 100px;
+  margin: 0 auto;
+  margin-top: 120px;
+  max-width: 70%;
 }
 
 #cabecalho {
-  display: block;
   position: fixed;
+  width: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  padding-left: 15px;
-  background: #1C5D99;
+  background: #1c5d99;
+  color: #fff;
+  text-align: center;
+}
+
+#cabecalho nav ul li {
+  display: inline;
+  margin: 0 5px;
+}
+
+#cabecalho nav ul li a {
+  text-decoration: none;
   color: #fff;
 }
 
@@ -34,6 +49,15 @@ body {
   background-color: #222222;
 }
 
-.div_ol {
+.wrapper_licoes {
   display: inline-block;
+  margin-right: 20px;
+}
+
+#licoes {
+  margin: 0;
+}
+
+#rodape {
+  margin: 20px;
 }
