--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ header {
   height: 200px;
   border-radius: 20px;
 }
+#link_github {
+  text-decoration: none;
+  background-color: #32bf84;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  margin-left: 70px;
+  padding: 5px;
+}
+table {
+  padding: 10px;
+}
 #licoes_aprendidas {
   display: inline-block;
 }
