--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
-    * {
-        margin: unset;
-    }
+ * {
+    margin: unset;
 
-    #cabecalho {
-        text-align: center;
-        background-color:forestgreen;
-        top: unset;
-    }
+}
 
-    body {
-        background-color:rgb(253,251,251);
-    }
+ #cabecalho {
+    text-align: center;
+    background-color: forestgreen;
+    top: unset;
+}
+
+ body {
+    background-color: rgb(253 , 251 , 251);
+}
