Finishing Requisite #10 to #15 - GOGO Tryber

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: "Franklin Gothic Medium", "Arial Narrow", "Arial", "sans-serif";
+  font-family: Arial, sans-serif;
   font-size: 20px;
-  font: 500;
   line-height: 2em;
 }
 
