--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253, 251, 251);
-  padding-top: 40px;
+  padding-top: 10px;
   font-family: 'Josefin Sans', sans-serif;
 }
 h1 {
@@ -8,7 +8,6 @@ h1 {
 }
 
 #cabecalho {
-  display: block;
   position: fixed;
   top: 0px;
   left: 0;
@@ -17,6 +16,7 @@ h1 {
   background-color: #272324;
   color: #83B799;
   z-index: 1;
+  border: solid;
 }
 #menu ul li {
   display: inline-block;
@@ -36,6 +36,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 120px;
+  /* Solucao da centralizacao https://www.w3.org/Style/Examples/007/center.pt_BR.html */
 }
 #licoes {
   background-color: gray;
@@ -45,6 +46,7 @@ h1 {
 }
 
 #licoes_aprendidas {
+  float: left;
   line-height: 25px;
 }
 
@@ -52,9 +54,12 @@ h1 {
   line-height: 25px;
 }
 
-#licoesNovas{
-  position: relative;
+#licoesNovas {
   float: left;
-  bottom: 283px;
-  left: 150px;
+}
+
+article {
+  border: dashed;
+  text-align: left;
+  clear: both;
 }
