--- a/style.css
+++ b/style.css
@@ -1,32 +1,95 @@
 body{
     background-color: rgb(253, 251, 251);
 }
+main{
+    background-color: green;
+    display: block;
+    margin-top: 90px;
+    
+}
 #cabecalho{
     position: fixed;
+    width: 100%;
+    margin: auto;
     top: 0px;
+    background-color: red;
+}
+#menu{
+    width: fit-content;
+    margin: 0px;
+    float: left;
+    clear: both;
+    border: 5px dashed green;
+}
+#menu ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+#menu li{
+    float: left;
+}
+#menu li a{
+    display:inline-block;
+    padding: 3px;
+    text-align: center;
+    text-decoration: none;
+    background-color: white;
+    color: red;
+}
+#menu a:hover{
+    background-color: red;
+    background-size: cover;
+    color: white;
 }
 #titulo {
+    color: aliceblue;
+    text-align: center;
+    font-size: 50px;
+    margin-block-start: 0.1em;
+    margin-block-end: 0;
 }
 #minha_foto{
+    border: 5px ridge red;
+    border-radius: 100%;
+    width: 200px;
+    height: 200px;
+    top: 90px;
+    margin: 20px;
+    
+}
+article{
 }
 #licoes_aprendidas{
-
+    text-align: center;
+    width: 150px;
+    height: 200px;
+    background-color: white;
+    margin: 10px;
+    padding-top:60px;
 }
 #licoes_aprendidas ol li{
-
+    text-align: center;
 }
 #licoes_a_aprender{
-
+    text-align: center;
+    width: 150px;
+    height: 200px;
+    background-color: white;
+    margin: 10px;
+    padding-top:60px;
 }
 #licoes_a_aprender ul li{
-
+    text-align: center;
 }
 #rodape{
-
+    width: auto;
+    height: 25px;
+    background-color: grey;
 }
 .lado-esquerdo{
-
+    display: inline-block;
 }
 .lado-direito{
-    
+    display: inline-block;
 }
