--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 /* header */
 #cabecalho {
-  background-color: rgb(0 , 128 , 0);
+  background-color: green
   height: 100px;
   position: fixed;
   top: 0;
@@ -26,7 +26,7 @@ body {
 }
 
 #menu {
-    text-align: right;
+  text-align: right;
 }
 
 #menu li {
@@ -36,7 +36,7 @@ body {
 }
 
 #minha_foto {
-  border: 1px solid rgb(0 , 0 , 0);
+  border: 1px solid black;
   border-radius: 50%;
   position: absolute;
   top: 5;
@@ -62,5 +62,5 @@ main {
 /* footer */
 #rodape {
   margin-top: 20px;
-  color: rgb(0 , 0 , 255);
+  color: blue;
 }
