--- a/style.css
+++ b/style.css
@@ -22,11 +22,13 @@ header {
 }
 #link_github {
   text-decoration: none;
+  color: white;
   background-color: #32bf84;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
   margin-left: 70px;
   padding: 5px;
+  letter-spacing: 2px;
 }
 table {
   padding: 10px;
