ajustando requisitos do code climate-9

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 /* header */
 #cabecalho {
-  background-color: green
+  background-color: green;
   height: 100px;
   position: fixed;
   top: 0;
