--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1 {
-  font-family: 'Courier New', 'Courier', serif;
+  font-family: "Courier New", 'Courier', serif;
   font-size: 40px;
   color: blue;
 }
