--- a/style.css
+++ b/style.css
@@ -19,10 +19,14 @@ h2, h3{
 #cabecalho{
     margin: auto;
     padding: 50px 490px;
-    text-align: center;
     background: rgb(172,172,172);
     background: linear-gradient(180deg, rgba(172,172,172,1) 0%, rgba(230,230,230,1) 100%);
     position: fixed;
+}
+
+#menu li{
+    display: inline-block;
+    padding-left: 30px;
 }
 
 #titulo{
@@ -37,7 +41,7 @@ h2, h3{
     border-radius: 50%;
     width: 300px;
     margin-left: 39%;
-    margin-top: 200px;
+    margin-top: 250px;
 
 }
 
@@ -77,4 +81,5 @@ h2, h3{
     margin-top: 10%;
     background: rgb(172,172,172);
     background: linear-gradient(180deg, rgba(172,172,172,1) 0%, rgba(230,230,230,1) 100%);
+    padding: 5px;
 }
