--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-body { 
-  background-color: rgb(253,251,251); 
+body {
+  background-color: rgb(253, 251, 251);
 }
-.titulos{
-  color: #1fe097 ;
+.titulos {
+  color: rgb(31, 224, 151);
 }
-#cabecalho { 
+#cabecalho {
   position: fixed;
   text-align: center;
   top: 0;
   width: 100%;
-  background-color: rgb(240,230,230);
-  border-bottom: 2px solid rgb(0,0,0);
+  background-color: rgb(240, 230, 230);
+  border-bottom: 2px solid black;
 }
 .image {
   margin-top: 100px;
@@ -20,9 +20,8 @@ body {
   border-radius: 50%;
 }
 .lista {
-    display: flex;
-    margin-left: 300px;
-    
+  display: flex;
+  margin-left: 300px;
 }
 #lista_licoes_aprendidas{
     width: 50%;
