--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: Verdana;
+  font-family: verdana, arial;
   margin: 0;
 }
 
@@ -19,7 +19,7 @@ body {
   background-color: rgb(64 , 61 , 57);
   padding: 10px;
   color: rgb(204 , 197 , 185);
-  font-weight: bold;
+  font-weight: 800;
   text-shadow: 1px 1px 2px black;
 }
 
