--- a/style.css
+++ b/style.css
@@ -3,19 +3,24 @@ body {
     margin: 0;
 }
 
-#titulo {margin: 0;padding:10px;color:white}
+#titulo { 
+    margin: 0;
+    padding: 10px;
+    color: white;
+}
 
 #cabecalho {
     display: fixed;
     top: 0;
     background-color: green;
-    color:white;
-    padding-bottom: 10px ;
+    color: white;
+    padding-bottom: 10px;
 }
 
 #cabecalho > h1 {
     text-align: center;
 }
+
 #cabecalho nav ul li {
     list-style-type: none;
 }
@@ -23,4 +28,8 @@ body {
 #minha_foto {
     width: 300px;
     padding: 10px;
+}
+
+#licoes_aprendidas {
+    float: left;
 }
